# unmuted

./: .env.example  .gitignore  AGENTS.md  GRAPHQL_RESEARCH.md  README.md  SPEC.md  debug_test.py  docker-compose.yml  features.json  tessl.json  test_bulk_insert.py  test_stream.py
.agents/skills/: tessl__propose
.claude/skills/: tessl__unit-test-generator
.codex/skills/: tessl__preflight
.gemini/skills/: tessl__ci-pipeline-synthesizer  tessl__mui  tessl__text-to-speech
.github/workflows/: ci.yml
.jules/: bolt.md  sentinel.md
.tessl/: RULES.md
.tessl/tiles/OpenRoster-ai/awesome-agents/: tile.json
.tessl/tiles/elevenlabs/skills/: tile.json
.tessl/tiles/santosomar/general-secure-coding-agent-skills/: tile.json
.tessl/tiles/softaworks/agent-toolkit/: tile.json
backend/: .dockerignore  Dockerfile  agents.py  auth.py  database.py  debug_test.py  extractor.py  jobs.py  logging_config.py  main.py  models.py  prompts.py  pyproject.toml  pytest.ini  resilience.py  scanner.py  security.py  test_ddg.py  test_ddgs.py  test_processing.py  tts.py  vlm_cache.py  vlm_engine.py
backend/tests/: __init__.py  conftest.py  test_cors_static.py  test_resilience.py  test_scanner.py  test_security_vuln.py
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: AdminDashboard.jsx  App.css  App.jsx  ErrorBoundary.jsx  NotificationContext.jsx  index.css  main.jsx  theme.js
k8s/: backend.yaml  configmap.yaml  frontend.yaml  namespace.yaml  pv.yaml  pvc.yaml  secret.example.yaml
(+13 files in other folders)
