[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.14.1",
    "fastapi>=0.135.1",
    "langgraph>=1.1.9",
    "openai>=2.29.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "python-json-logger>=2.0.7",
    "python-multipart>=0.0.22",
    "uvicorn>=0.42.0",
    "sqlalchemy>=2.0.38",
    "aiosqlite>=0.21.0",
    "alembic>=1.14.1",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.0",
]
